# flint-mpoly-rs

./: Cargo.toml  README.md  build.rs
src/: grammar.pest  lib.rs  main.rs  main_old.rs  modcoeff.rs  modmpoly.rs  modmrat.rs  modnmat.rs  parser.rs  primes.rs  qcoeff.rs  qmpoly.rs  qmrat.rs  zcoeff.rs  zmpoly.rs  zmpoly_q.rs  zmrat.rs
src/flint_rs/: arith.rs  fft.rs  flint.rs  fmpq.rs  fmpq_mat.rs  fmpq_mpoly.rs  fmpq_mpoly_factor.rs  fmpq_poly.rs  fmpq_vec.rs  fmpz.rs  fmpz_factor.rs  fmpz_lll.rs  fmpz_mat.rs  fmpz_mod.rs  fmpz_mod_mat.rs  fmpz_mod_mpoly.rs  fmpz_mod_mpoly_factor.rs  fmpz_mod_poly.rs  fmpz_mod_poly_factor.rs  fmpz_mod_vec.rs  fmpz_mpoly.rs  fmpz_mpoly_factor.rs  fmpz_poly.rs  fmpz_poly_factor.rs  fmpz_poly_mat.rs  fmpz_poly_q.rs  fmpz_vec.rs  fq.rs  fq_default.rs  fq_default_mat.rs  fq_default_poly.rs  fq_default_poly_factor.rs  fq_embed.rs  fq_mat.rs  fq_nmod.rs  fq_nmod_embed.rs  fq_nmod_mat.rs  fq_nmod_mpoly.rs  fq_nmod_mpoly_factor.rs  fq_nmod_poly.rs  (+32 more)
tests/: parallel.rs
