[package]
name = "flint-mpoly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
flint-sys = {git="https://github.com/apelloni/flint-rs", branch="flint-3"}
num = "0.4.1"
pest = "2.7.5"
pest_derive = "2.7.5"
rayon = "1.8.0"
regex = "1.10.2"
