[package]
name = "flint-mpoly"
version = "0.1.0"
authors = ["apelloni <apelloni@ethz.ch>"]
description = "Multivariate polynomial arithmetic with FLINT backend"
repository = "https://github.com/apelloni/flint-mpoly-rs"
readme = "README.md"
license = "GPL-3.0"
keywords = ["modular", "arithmetic", "polynomial","multivariate","mpoly"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
gmp-mpfr-sys = "1.6.1"
libc = "0.2.152"
num = "0.4.1"
pest = "2.7.5"
pest_derive = "2.7.5"
rayon = "1.8.0"
regex = "1.10.2"
